# django-store-api

./: .gitignore  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
store/: db.sqlite3
store/api/: admin.py  api_views.py  models.py  serializers.py  tests.py  urls.py
store/api/management/commands/: reset.py
store/api/migrations/: 0001_initial.py  0002_product_amount_alter_productrating_count.py  0003_alter_productrating_count_alter_productrating_rate.py  0004_product_rating_count_alter_product_rating_and_more.py
store/custom_types/: product.py
store/store/: settings.py  tests.py  urls.py  views.py
store/templates/: commands.html
