[metadata]
name = django-store-api
description = A django private rest API inspired by fakestoreapi
long_description = file: README.md
long_description_content_type = text/markdown
author =  Víctor Auñón
author_email = hola@victoraunon.com
license = MIT
version = 0.0.1
url = https://github.com/victor-aunon/django-store-api
classifiers = 
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = store, api, custom_types
install_requires = 
    Django>=4.1.5
    djangorestframework>=3.14
    django-configurations>=2.4
    django-stubs>=1.13.0
    requests>=2.28
    types-requests>=2.28
python_requires = >=3.10
package_dir = 
    = store
zip_safe = no

[flake8]
max-line-length = 88
extend-ignore = E203

[options.extras_require]
testing =
    flake8>=4.0
    black>=22.12.0
    mypy>=0.910
    tox>=4.2

[options.package_data]
store = py.typed
api = py.typed
custom_types = py.typed
